fix recent spacing

--- a/custom.css
+++ b/custom.css
@@ -190,7 +190,7 @@ a.nav-right {
   display: block;
   width: 148px;
   border-radius: 2px;
-  margin: 16px auto;
+  margin: 4px auto 16px auto;
 }
 
 /* style recents */
@@ -243,7 +243,7 @@ a.nav-right {
     margin-top: 16px;
     font-size: 13px;
   }
-  .favorite-item {
+  .favorite-item, .recent-item {
     margin-top: 0;
     margin-bottom: 0;
   }
